--- a/Assignment 1/Function test.ipynb
+++ b/Assignment 1/Function test.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G-----I---------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t0s\n",
-      "----G----------I------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t1s\n",
-      "---------G------------I-----------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t2s\n",
-      "--------------G---------------I---------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t3s\n",
-      "-------------------G-------------I------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t4s\n",
-      "----------------------G------------I----------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t5s\n",
-      "---------------------------G-------------I----------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t6s\n",
-      "------------------------------G--------------I------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t7s\n",
-      "----------------------------------G-------------I---X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t8s\n",
-      "---------------------------------------G-----------XI--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X--------------------------------------------------X\t9s\n",
+      "(1, 9) (3, 5) 5 50\n",
+      "G-----I---------------------------------------------X\t0s\n",
+      "-----G--I-------------------------------------------X\t1s\n",
+      "---------G-------I----------------------------------X\t2s\n",
+      "------------G------I--------------------------------X\t3s\n",
+      "---------------G----------I-------------------------X\t4s\n",
+      "-------------------G------------I-------------------X\t5s\n",
+      "----------------------G----------I------------------X\t6s\n",
+      "--------------------------G---------------I---------X\t7s\n",
+      "-------------------------------G-----------I--------X\t8s\n",
+      "-----------------------------------G--------------I-X\t9s\n",
+      "---------------------------------------G-----------X\t10s\n",
       "Imp has escaped!\n"
      ]
     },
@@ -28,14 +30,15 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from imp import reload\n",
     "import GISimple\n",
-    "\n",
+    "reload(GISimple)\n",
     "# Create a new GISimple object\n",
     "impSpd = (1,9)\n",
     "golemSpd = (3,5)\n",
