--- a/Assignment 1/Function test.ipynb
+++ b/Assignment 1/Function test.ipynb
@@ -2,37 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 9) (3, 5) 5 50\n",
-      "G-----I---------------------------------------------X\t0s\n",
-      "-----G--I-------------------------------------------X\t1s\n",
-      "---------G-------I----------------------------------X\t2s\n",
-      "------------G------I--------------------------------X\t3s\n",
-      "---------------G----------I-------------------------X\t4s\n",
-      "-------------------G------------I-------------------X\t5s\n",
-      "----------------------G----------I------------------X\t6s\n",
-      "--------------------------G---------------I---------X\t7s\n",
-      "-------------------------------G-----------I--------X\t8s\n",
-      "-----------------------------------G--------------I-X\t9s\n",
-      "---------------------------------------G-----------X\t10s\n",
-      "Imp has escaped!\n"
+     "ename": "TypeError",
+     "evalue": "GISimple() missing 4 required positional arguments: 'impSpd', 'golemSpd', 'headStart', and 'exitPosition'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m headStart \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m      8\u001b[0m exitPosition \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m50\u001b[39m\n\u001b[1;32m----> 9\u001b[0m GISimple\u001b[38;5;241m.\u001b[39mGISimple()\n",
+      "\u001b[1;31mTypeError\u001b[0m: GISimple() missing 4 required positional arguments: 'impSpd', 'golemSpd', 'headStart', and 'exitPosition'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
