--- a/Assignment 1/GISimulation.ipynb
+++ b/Assignment 1/GISimulation.ipynb
@@ -37,9 +37,9 @@
     "play = True\n",
     "while play == True:\n",
     "    for num, spot in enumerate(tunnels):\n",
-    "        if num == golem:\n",
+    "        if num == golem: # Display golem at the right spot\n",
     "            print('G', end=\"\")\n",
-    "        elif num == imp:\n",
+    "        elif num == imp: # Display imp at the right spot\n",
     "            print('I', end=\"\")\n",
     "        print(spot, end=\"\")\n",
     "    print(\"\\t\"+str(secs)+\"s\")\n",
