--- a/Assignment 1/Function test.ipynb
+++ b/Assignment 1/Function test.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "GISimple() missing 4 required positional arguments: 'impSpd', 'golemSpd', 'headStart', and 'exitPosition'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m headStart \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m      8\u001b[0m exitPosition \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m50\u001b[39m\n\u001b[1;32m----> 9\u001b[0m GISimple\u001b[38;5;241m.\u001b[39mGISimple()\n",
-      "\u001b[1;31mTypeError\u001b[0m: GISimple() missing 4 required positional arguments: 'impSpd', 'golemSpd', 'headStart', and 'exitPosition'"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from imp import reload\n",
+    "from importlib import reload\n",
     "import GISimple\n",
     "reload(GISimple)\n",
     "# Create a new GISimple object\n",
